force-app/main/default/objects/FlightListing__c/FlightListing__c.object-meta.xml
<CustomObject>
    <label>FlightListing</label>
    <nameField>
        <label>Flight Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Flights</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>