force-app/main/default/objects/FlightListing__c/fields/Arrival_Date_And_Time__c.field-meta.xml
<CustomField>
    <fullName>Arrival_Date_And_Time__c</fullName>
    <description>Arrival Date And Time At Destination.</description>
    <label>Arrival  Date And Time</label>
    <type>DateTime</type>
</CustomField>