force-app/main/default/objects/FlightListing__c/fields/Departure_Date_And_Time__c.field-meta.xml
<CustomField>
    <fullName>Departure_Date_And_Time__c</fullName>
    <description>Departure Date And Time from Source.</description>
    <label>Departure Date And Time</label>
    <type>DateTime</type>
</CustomField>