force-app/main/default/objects/FlightListing__c/fields/Departure_Date_From__c.field-meta.xml
<CustomField>
    <fullName>Departure_Date_From__c</fullName>
    <formula>DATEVALUE( Departure_Date_And_Time__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Departure Date From</label>
    <type>Date</type>
</CustomField>