force-app/main/default/objects/FlightListing__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Arrival_City__c</columns>
    <columns>Departure_City__c</columns>
    <columns>Departure_Date_From__c</columns>
    <columns>Departure_Date_And_Time__c</columns>
    <columns>Type__c</columns>
    <columns>Price__c</columns>
    <columns>Airline_Number__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>